Working app, redis, sidekiq

--- a/docker/development/docker-compose.yml
+++ b/docker/development/docker-compose.yml
@@ -11,5 +11,21 @@ services:
       - ../../:/myapp
     ports:
       - "3000:3000"
+    environment:
+      REDIS_URL: "redis://redis:6379/12"
     depends_on:
       - db
+  redis:
+    image: redis
+    volumes:
+      - ../../tmp/db:/var/lib/redis/data
+  sidekiq:
+    build: ../../
+    command: 'bundle exec sidekiq'
+    volumes:
+      - ../../:/myapp
+    environment:
+      RAILS_ENV: "development"
+      REDIS_URL: "redis://redis:6379/12"
+    depends_on:
+      - redis
